--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <div id="slider-wrap">
         <div id="active-slide">
             <div id="slider">
-                <div class="slide"><img src="1.jpg"></div>
-                <div class="slide"><img src="2.jpg"></div>
-                <div class="slide"><img src="3.jpg"></div>
-                <div class="slide"><img src="4.jpg"></div>
+                <div class="slide"><img src="img/tea1.jpg"></div>
+                <div class="slide"><img src="img/tea1.jpg"></div>
+                <div class="slide"><img src="img/tea1.jpg"></div>
+                <div class="slide"><img src="img/tea1.jpg"></div>
             </div>
         </div>
     </div>
@@ -106,7 +106,8 @@
       </section>
 
     </main>
-    <script src="script.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
